# GoodMarket.liveOriginalDevelopment

./: .replit  README.md  analytics_service.py  blockchain.py  cache_utils.py  config.py  main.py  maintenance_service.py  news_feed.py  notifications_service.py  object_storage_client.py  pyproject.toml  reward_config_service.py  routes.py  supabase_client.py  ubi_tracker.py
community_stories/: __init__.py  blockchain.py  community_stories_service.py  routes.py
contracts/: LearnAndEarnRewards.sol  LearnAndEarnRewards_Flattened.sol  deploy_learn_earn_contract.py  deployment_info.json  metadata.json  standard_json_input.json  verify_contract.py
facebook_task/: __init__.py  blockchain.py  facebook_task.py
learn_and_earn/: __init__.py  contract_service.py  learn_and_earn.py
minigames/: __init__.py  blockchain.py  garden_blockchain.py  garden_manager.py  garden_routes.py  minigames_manager.py  routes.py
minigames/static/: minigames.js
research/: gooddollar_github_lookup.md
telegram_task/: __init__.py  blockchain.py  telegram_task.py
telegram_task/templates/: admin_dashboard.html  community_stories.html  dashboard.html  garden.html  homepage.html  index.html  learn_and_earn.html  login.html  minigames.html  news_article.html  news_feed.html  overview.html  reward_config.html  ubi_tracker.html
twitter_task/: __init__.py  blockchain.py  twitter_task.py
wallet_connect/: __init__.py  routes.py
